--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,10 @@ body,h1,h2,h3,h4,h5,h67{
     color: rgba(red, green, blue, alpha)
     algo css
 }*/
-/*Tipo Id*/
+/*Tipo Id
 #encabezado{
     background-color: #93485E;
     padding: 10px;
     color: red
     algo css
-}
+}*/
